cambio en data table

--- a/src/app/heroes/heroe/heroe.component.html
+++ b/src/app/heroes/heroe/heroe.component.html
@@ -1,16 +1,16 @@
 <h1>{{nombre}}</h1>
 
 <dl>
-    <td>nombre:</td>
+    <dt>nombre:</dt>
     <dd>{{nombre}}</dd>
 
-     <td>edad:</td>
+     <dt>edad:</dt>
     <dd>{{edad}}</dd>
 
-     <td>funcion:</td>
+     <dt>funcion:</dt>
     <dd>{{obtenerNombre()}}</dd>
 
-     <td>Capitalizado:</td>
+     <dt>Capitalizado:</dt>
     <dd>{{nombreCapitalizado}}</dd>
 </dl>
 
